Added contacts.html page. Initialized Couchbase mobile.

--- a/KendoPouchDBApp/views/contacts.html
+++ b/KendoPouchDBApp/views/contacts.html
@@ -5,5 +5,5 @@
 <!-- this is the template used by the listview. template items are automatically
      wrapped in an <li> by Kendo UI Mobile -->
 <script type="text/x-kendo-template" id="contactsTemplate">
-  <a data-bind="click: alert">#: data.name #</a>
+  <a data-bind="click: open">#: data.name #</a>
 </script>
