--- a/KendoPouchDBApp/views/home.html
+++ b/KendoPouchDBApp/views/home.html
@@ -1,3 +1,4 @@
 <div data-role="view" data-title="Home" data-layout="main" data-model="APP.models.home">
+    <!-- TODO: bind it to model -->
     <div id="grid"></div>
 </div>
